    are required for `snap prepare-image`.  (LP: #1642427)
  * Structures with type='mbr' are deprecated.  Use structure role
    instead.  (LP: #1638660)
  * mbr structures must start at offset 0.  (LP: #1630769)
  * Fixed sanity checking of --image-size argument for out-of-offset-order
    structure definitions.  (LP: #1643598)

 -- Barry Warsaw <barry@ubuntu.com>  Tue, 08 Nov 2016 17:31:21 -0500

ubuntu-image (0.11+17.04ubuntu1) zesty; urgency=medium

  * Sort the structures in a volume by their offset, even if the offset is
    defined implicitly (i.e. not present in the gadget.yaml).  Also, check
    for any structure conflicts and raise a ValueError in that case.
    (LP: #1631423)
  * offset-write arguments will only accept 32 bit integers.  (LP: #1617443)
  * Add a better manpage.  (LP: #1638386)
  * Tracebacks in the `snap prepare-image` command are suppressed unless
    --debug is given.  However, the failure is still logged.  (LP: #1621445)
  * Handle -but ignore- the gadget.yaml `defaults` section.  (LP: #1632449)
  * Structure ids are disallowed on mbr volumes.  (LP: #1632724)
  * The package can still be built if python3-debian is not available.

 -- Barry Warsaw <barry@ubuntu.com>  Fri, 04 Nov 2016 18:54:16 -0400

ubuntu-image (0.10+17.04ubuntu1) zesty; urgency=medium

  * Only write out nocloud-net metadata file (thus indicating a local seed
    and preventing a search elsewhere for user data) when the --cloud-init
    parameter is given.  (LP: #1633232)

 -- Barry Warsaw <barry@ubuntu.com>  Tue, 25 Oct 2016 09:51:24 -0400

ubuntu-image (0.9+17.04ubuntu1) zesty; urgency=medium

  * Fix snap creation.  (LP: #1631961)
  * Copy everything under <unpackdir>/image into <rootfs>/system-data
    except boot/.  (LP: #1632134)
  * Optional --image-size command line option can be used to force the
    resulting disk image to a larger than calculated size.  (LP: #1632085)
  * Fix MBR partition size rounding error due to internal bug and implicit